fixed sizing of view portfolio btn on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn-view-port {
   color: whitesmoke !important;
+  border: 1px solid whitesmoke !important;
+  display: inline-block;
+  max-width: 90%;
+  text-align: center;
+  padding: 10px 20px;
+}
+@media screen and (max-width: 768px) {
+  .btn-view-port {
+    width: auto !important;
+    display: inline-block;
+    padding: 8px 16px;
+  }
 }
 
 figure {
